--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,5 @@
 @import 'config';
+@import 'menu';
 
 * {
     box-sizing: border-box;
@@ -7,7 +8,6 @@
 body {
     @include background;
     background-color: $primary-color;
-    background: src("images/recoveryvid.mov");
     color: #ffffff;
     height: 100%;
     margin: 0;
@@ -21,13 +21,15 @@ h1, h2, h3 {
     font-weight: 400;
     
     &.lg-heading {
-        font-size: 4rem;
+        font-size: 3rem;
     }
 
     &.sm-heading {
-        margin-bottom: 2rem;
+        margin-bottom: 1rem;
+        font-size: 1rem;
         padding: 0.2rem 1rem;
-        background: rgba(lighten($primary-color, 2), 0.5);
+        padding-left: 0;
+        // background: rgba(lighten($primary-color, 7), 0.5);
     }
 
 
@@ -53,7 +55,7 @@ main {
     height: 100%;
 
     .icons {
-        margin-top: 1rem;
+        margin-top: 2rem;
 
         a{
             padding: 0.4rem;
