--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,4 +1,4 @@
-$primary-color: #444444;
+$primary-color: #444;
 $secondary-color: #eece1a;
 $show-home-image: true;
 $home-image: url(../images/parkwaypick.jpg);
@@ -28,6 +28,17 @@ $background-opacity: 0.75;
             }
         }
 
+    }
+}
+
+
+
+//set text color
+@function set-text-color($color) {
+    @if (lightness($color) > 40) {
+        @return #000;
+    }@else {
+        @return #fff;
     }
 }
 
