--- a/scss/main.scss
+++ b/scss/main.scss
@@ -120,8 +120,31 @@ main {
     }
 }
 
-// CONTACT FORM LAYOUT
+// CONTACT page FORM LAYOUT
+.boxes {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 1rem;
 
+    div {
+        font-size: 2rem;
+        border: 3px #fff solid;
+        padding: 0.5rem 1rem;
+        margin-bottom: 3rem;
+        @include easeOut;
+
+        &:hover {
+            padding: 0.5rem 1.5rem;
+            background: $secondary-color;
+            color: set-text-color($secondary-color);
+            span{
+                color: set-text-color($secondary-color);
+            }
+        }
+    }
+}
 
 
 #main-footer {
